--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="min-h-screen bg-gray-400 flex">
         <div class="justify-center flex w-2/12 bg-white">
-            <div class="border-r border-gray-200 pt-5 pb-4 overflow-y-auto">
+            <div class="pt-5 pb-4 overflow-y-auto">
                 <div class="flex items-center flex-shrink-0 px-4">
                     <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-on-white.svg" alt="Workflow">
                 </div>
