--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                     <p class="mt-2 text-center text-sm leading-5 text-gray-600">
                         Not registered yet!
                         <a href="register.html" class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
-                            Regiter
+                            Register
                         </a>
                     </p>
                 </div>
@@ -53,9 +53,9 @@
                             </div>
                             <div>
                                 <span class="block w-full rounded-md shadow-sm">
-                                    <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                                    <a href="index.html" class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
                                         Sign in
-                                    </button>
+                                    </a>
                                 </span>
                             </div>
                         </form>
