--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <div class="flex-1 flex flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
             <div class="mx-auto w-full max-w-sm lg:w-96">
                 <div>
-                    <img class="h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-on-white.svg" alt="Workflow">
+                    <img class="h-12 w-auto" src="assets/images/scram.png" alt="scram">
                     <h2 class="mt-6 text-3xl leading-9 font-extrabold text-gray-900">
                         Sign in to your account
                     </h2>
@@ -64,8 +64,7 @@
             </div>
         </div>
         <div class="hidden lg:block relative w-0 flex-1">
-            <img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1505904267569-f02eaeb45a4c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1908&q=80"
-                alt="">
+            <img class="absolute inset-0 h-full w-full object-cover" src="assets/images/service.jpg" alt="">
         </div>
     </div>
 </body>
