--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="min-h-screen bg-white flex">
-        <div class="flex-1 flex flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+        <div class="flex-1 flex flex-col justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
             <div class="mx-auto w-full max-w-sm lg:w-96">
                 <div>
                     <img class="h-12 w-auto" src="assets/images/scram.png" alt="scram">
