--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
                 </p>
             </div>
 
-            <form class="mt-8">
+            <form class="mt-8 bg-white p-5 rounded shadow-md">
                 <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                         <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-first-name">
