--- a/enrollment.html
+++ b/enrollment.html
@@ -809,8 +809,16 @@
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-email">
                                         E-Mail
                                     </label>
-                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5"
-                                        id="grid-email" type="email" />
+                                    <!-- <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-email" type="email" /> -->
+                                    <div class="mt-1 relative rounded-md shadow-sm">
+                                        <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                                            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                                                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                                            </svg>
+                                        </div>
+                                        <input id="grid-email" class="form-input block w-full pl-10 sm:text-sm sm:leading-5" placeholder="you@example.com">
+                                    </div>
                                 </div>
                             </div>
                         </div>
