--- a/enrolled-services-3.html
+++ b/enrolled-services-3.html
@@ -113,10 +113,10 @@
                     <div class="px-4 mt-6 sm:px-6 lg:px-8">
                         <h2 class="text-gray-500 text-xs font-medium uppercase tracking-wide">Subhead line here about how the services are amazing etc more words for longer subhead woohoo yeaa boi</h2>
                     </div>
-                    <div class="min-h-screen flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8">
-                        <div class="w-full shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 border">
-                            <div class="w-full mb-8">
-                                <h3 class="text-2xl sm:text-3xl text-gray-700 mb-4">Location Monitoring (GPS)</h3>
+                    <div class="flex items-center justify-center py-4 px-4 sm:px-6 lg:px-8">
+                        <div class="w-full shadow-lg px-4 py-4 rounded sm:rounded-lg sm:px-6 sm:py-4 border">
+                            <div class="w-full mb-4">
+                                <h3 class="text-2xl sm:text-3xl text-gray-700 mb-2">Location Monitoring (GPS)</h3>
                                 <nav class="max-w-2xl m-auto">
                                     <ul class="flex items-center justify-center">
                                         <li class="relative pr-8 sm:pr-24 lg:pr-40">
@@ -188,7 +188,7 @@
                                         <h2 class="text-xl sm:text-2xl font-medium sm:leading-10 text-gray-700 mb-4">Order Summary</h2>
                                         <div class="sm:flex">
                                             <div class="flex-initial">
-                                                <img src="assets/images/gps-tracking.jpg" />
+                                                <img class="h-48" src="assets/images/gps-tracking.jpg" />
                                             </div>
                                             <div class="flex-initial ml-3 md:ml-6 lg:ml-12">
                                                 <div>
@@ -212,10 +212,10 @@
                         </div>
                     </div>
 
-                    <div class="min-h-screen flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8">
-                        <div class="w-full shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 border">
-                            <div class="w-full mb-8">
-                                <h3 class="text-2xl sm:text-3xl text-gray-700 mb-4">Alcohol Monitoring</h3>
+                    <div class="flex items-center justify-center py-4 px-4 sm:px-6 lg:px-8">
+                        <div class="w-full shadow-lg px-4 py-4 rounded sm:rounded-lg sm:px-6 sm:py-4 border">
+                            <div class="w-full mb-4">
+                                <h3 class="text-2xl sm:text-3xl text-gray-700 mb-2">Alcohol Monitoring</h3>
                                 <nav class="max-w-2xl m-auto">
                                     <ul class="flex items-center justify-center">
                                         <li class="relative pr-8 sm:pr-24 lg:pr-40">
@@ -294,7 +294,7 @@
                                         <h2 class="text-xl sm:text-2xl font-medium sm:leading-10 text-gray-700 mb-4">Order Summary</h2>
                                         <div class="sm:flex">
                                             <div class="flex-initial">
-                                                <img src="assets/images/alcohol-testing.jpg" />
+                                                <img class="h-48" src="assets/images/alcohol-testing.jpg" />
                                             </div>
                                             <div class="flex-initial ml-3 md:ml-6 lg:ml-12">
                                                 <div>
