--- a/enrolled-services-3.html
+++ b/enrolled-services-3.html
@@ -125,9 +125,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                                             </svg>
                                             <div class="absolute inset-0 flex items-center translate-y-15">
-                                                <div class="h-0.5 w-full bg-indigo-600"></div>
+                                                <div class="h-0.5 w-full bg-primary"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900 focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd" />
@@ -141,9 +141,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
                                             </svg>
                                             <div class="absolute inset-0 flex items-center translate-y-15">
-                                                <div class="h-0.5 w-full bg-indigo-600"></div>
+                                                <div class="h-0.5 w-full bg-primary"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900 focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd" />
@@ -159,8 +159,8 @@
                                             <div class="absolute inset-0 flex items-center translate-y-15">
                                                 <div class="h-0.5 w-full bg-gray-200"></div>
                                             </div>
-                                            <span class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-indigo-600 rounded-full mb-3">
-                                                <span class="h-2.5 w-2.5 bg-indigo-600 rounded-full"></span>
+                                            <span class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-primary rounded-full mb-3">
+                                                <span class="h-2.5 w-2.5 bg-primary rounded-full"></span>
                                             </span>
                                         </li>
                                 
@@ -224,9 +224,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                                             </svg>
                                             <div class="absolute inset-0 flex items-center translate-y-15">
-                                                <div class="h-0.5 w-full bg-indigo-600"></div>
+                                                <div class="h-0.5 w-full bg-primary"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900 focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd" />
@@ -240,9 +240,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
                                             </svg>
                                             <div class="absolute inset-0 flex items-center translate-y-15">
-                                                <div class="h-0.5 w-full bg-indigo-600"></div>
+                                                <div class="h-0.5 w-full bg-primary"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900 focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd" />
@@ -256,9 +256,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path>
                                             </svg>
                                             <div class="absolute inset-0 flex items-center translate-y-15">
-                                                <div class="h-0.5 w-full bg-indigo-600"></div>
+                                                <div class="h-0.5 w-full bg-primary"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900 focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd" />
@@ -275,8 +275,7 @@
                                             <div class="absolute inset-0 flex items-center translate-y-15">
                                                 <div class="h-0.5 w-full bg-gray-200"></div>
                                             </div>
-                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-indigo-600 rounded-full hover:bg-indigo-900 focus:bg-indigo-900
-                                            focus:outline-none transition ease-in-out duration-150 mb-3">
+                                            <a href="#" class="relative w-8 h-8 flex items-center justify-center bg-primary rounded-full focus:outline-none transition ease-in-out duration-150 mb-3">
                                                 <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                     <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                                         clip-rule="evenodd"></path>
