--- a/enrollment.html
+++ b/enrollment.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
@@ -260,7 +261,7 @@
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-city">
                                         Shipping Address
                                     </label>
-                                    <input type="checkbox" class="form-checkbox h-8 w-8 text-indigo-600 transition duration-150 ease-in-out shipping-checked" checked>
+                                    <input type="checkbox" class="form-checkbox h-8 w-8 text-primary transition duration-150 ease-in-out shipping-checked" checked>
                                 </div>
                             </div>
 
@@ -533,7 +534,7 @@
                                 </div>
                             </div>
                             <div class="w-full mb-6">
-                                <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out uppercase tracking-widest">
+                                <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary focus:outline-none transition duration-150 ease-in-out uppercase tracking-widest">
                                     Enroll Now
                                 </button>
                             </div>
