Added fields in enrollment form

--- a/enrollment.html
+++ b/enrollment.html
@@ -346,7 +346,40 @@
                                     <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-emer-contact" type="text" required />
                                 </div>
                             </div>
+
+                            <div class="mb-10 pt-6 border-b"></div>
+
+                            <div class="flex flex-wrap -mx-3 mb-6">
+                                <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                                    <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-f-name-2">
+                                        First Name <span class="text-red-400">*</span>
+                                    </label>
+                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-f-name-2" type="text" required />
+                                </div>
+                                <div class="w-full md:w-1/2 px-3">
+                                    <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-l-name-2">
+                                        Last Name <span class="text-red-400">*</span>
+                                    </label>
+                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-l-name-2" type="text" required />
+                                </div>
+                            </div>
+                            <div class="flex flex-wrap -mx-3 mb-6">
+                                <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                                    <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-relationship-2">
+                                        Relationship <span class="text-red-400">*</span>
+                                    </label>
+                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-relationship-2" type="text" required />
+                                </div>
+                                <div class="w-full md:w-1/2 px-3">
+                                    <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-emer-contact-2">
+                                        Contact <span class="text-red-400">*</span>
+                                    </label>
+                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-emer-contact-2" type="text" required />
+                                </div>
+                            </div>
                         </div>
+
+                        
                     </div>
                 </div>
                 
