Worked on forms and forgot password

--- a/register.html
+++ b/register.html
@@ -6,6 +6,8 @@
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
@@ -17,7 +19,7 @@
                 </h2>
                 <p class="mt-2 text-center text-sm leading-5 text-gray-600">
                     Already registered!
-                    <a href="login.html" class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                    <a href="login.html" class="font-medium text-primary focus:outline-none focus:underline transition ease-in-out duration-150">
                         Login
                     </a>
                 </p>
@@ -70,7 +72,7 @@
 
 
                 <div class="w-full">
-                    <a href="index.html" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                    <a href="index.html" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary focus:outline-none transition duration-150 ease-in-out">
                         Register
                     </a>
                 </div>
