--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
     
@@ -19,7 +21,7 @@
                     </h2>
                     <p class="mt-2 text-center text-sm leading-5 text-gray-600">
                         Not registered yet!
-                        <a href="register.html" class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                        <a href="register.html" class="font-medium text-primary focus:outline-none focus:underline transition ease-in-out duration-150">
                             Register
                         </a>
                     </p>
@@ -43,17 +45,32 @@
                                     <input id="password" type="password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
                                 </div>
                             </div>
-                            <div class="flex items-center justify-between">
+                            <!-- <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <input id="remember_me" type="checkbox" class="form-checkbox h-4 w-4 text-indigo-600 transition duration-150 ease-in-out">
                                     <label for="remember_me" class="ml-2 block text-sm leading-5 text-gray-900">
                                         Remember me
                                     </label>
                                 </div>
+                            </div> -->
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center">
+                                    <input id="remember_me" type="checkbox" class="form-checkbox h-4 w-4 text-primary transition duration-150 ease-in-out">
+                                    <label for="remember_me" class="ml-2 block text-sm leading-5 text-gray-900">
+                                        Remember me
+                                    </label>
+                                </div>
+                            
+                                <div class="text-sm leading-5">
+                                    <a href="forgot-password.html" class="font-medium text-primary hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                                        Forgot your password?
+                                    </a>
+                                </div>
                             </div>
+
                             <div>
                                 <span class="block w-full rounded-md shadow-sm">
-                                    <a href="index.html" class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                                    <a href="index.html" class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary focus:outline-none transition duration-150 ease-in-out">
                                         Sign in
                                     </a>
                                 </span>
