--- a/product-details.html
+++ b/product-details.html
@@ -182,7 +182,7 @@
                                                     Days of Service:
                                                 </label>
                                                 <div class="mt-1 rounded-md">
-                                                    <input id="service" type="service" class="appearance-none sm:w-1/2 px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
+                                                    <input id="service" type="number" class="appearance-none sm:w-1/2 px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" value="30">
                                                 </div>
                                             </div>
                                             <div class="mt-6 text-right">
