Document page changes

--- a/documents.html
+++ b/documents.html
@@ -118,6 +118,10 @@
                         </div>
                     </div>
 
+                    <div class="px-4 mt-6 sm:px-6 lg:px-8">
+                        <h2 class="text-gray-500 text-xs font-medium uppercase tracking-wide">Subhead line here about how the services are
+                            amazing etc more words for longer subhead woohoo yeaa boi</h2>
+                    </div>
                     <div class="mt-8 bg-white shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 m-4 sm:m-8 sm:mt-10 border">
                         <div class="bg-white shadow overflow-hidden sm:rounded-md">
                             <ul>
@@ -128,7 +132,32 @@
                                                 <svg class="mr-3 h-6 w-6 text-green-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                                                 </svg>
-                                                <div class="text-sm leading-5 font-medium text-primary truncate">
+                                                <div class="text-sm leading-5 font-medium text-primary">
+                                                    Installation Certificate
+                                                </div>
+                                            </div>
+
+                                            <div class="mt-2 ml-9 lg:flex lg:justify-between">
+                                                <div class="lg:flex">
+                                                    <div class="mr-6 flex items-center text-sm leading-5 text-gray-500">
+                                                        Product: &nbsp;<span class="font-semibold">Location Monitoring (GPS)</span>
+                                                    </div>
+                                                    <div class="mt-2 flex items-center text-sm leading-5 text-gray-500 lg:mt-0">
+                                                        Order No: &nbsp;<span class="font-semibold">#012345</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="border-t border-gray-200">
+                                    <a href="#" class="block hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition duration-150 ease-in-out">
+                                        <div class="px-4 py-4 sm:px-6">
+                                            <div class="flex items-center">
+                                                <svg class="mr-3 h-6 w-6 text-green-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                                                </svg>
+                                                <div class="text-sm leading-5 font-medium text-primary">
                                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                                 </div>
                                             </div>
@@ -142,21 +171,7 @@
                                                 <svg class="mr-3 h-6 w-6 text-green-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                                                 </svg>
-                                                <div class="text-sm leading-5 font-medium text-primary truncate">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="border-t border-gray-200">
-                                    <a href="#" class="block hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition duration-150 ease-in-out">
-                                        <div class="px-4 py-4 sm:px-6">
-                                            <div class="flex items-center">
-                                                <svg class="mr-3 h-6 w-6 text-green-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
-                                                </svg>
-                                                <div class="text-sm leading-5 font-medium text-primary truncate">
+                                                <div class="text-sm leading-5 font-medium text-primary">
                                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                                 </div>
                                             </div>
