Enrollment form changes

--- a/enrollment.html
+++ b/enrollment.html
@@ -125,7 +125,7 @@
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-middle-name">
                                         Middle Name
                                     </label>
-                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-middle-name" type="text" required />
+                                    <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-middle-name" type="text" />
                                 </div>
                                 <div class="w-full md:w-2/6 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-last-name">
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-social-security">
-                                        Social Security # <span class="text-red-400">*</span>
+                                        Social Security # <span class="text-red-400">*</span> <span class="text-xs text-gray-500">(last 4 digits ONLY)</span>
                                     </label>
                                     <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-social-security" type="text" maxlength="4" required />
                                 </div>
@@ -172,13 +172,13 @@
                             <div class="flex flex-wrap -mx-3 mb-6">
                                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-home-phone">
-                                        Home Phone <span class="text-red-400">*</span>
+                                        Primary Phone Contact <span class="text-red-400">*</span> <span class="text-xs text-gray-500">(xxx-xxx-xxxx)</span>
                                     </label>
                                     <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-home-phone" type="text" required />
                                 </div>
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-cell-phone">
-                                        Cell Phone <span class="text-red-400">*</span>
+                                        Alternate Phone Contact <span class="text-red-400">*</span> <span class="text-xs text-gray-500">(xxx-xxx-xxxx)</span>
                                     </label>
                                     <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-cell-phone" type="text" required />
                                 </div>
@@ -222,7 +222,7 @@
                             <div class="flex flex-wrap -mx-3 mb-6">
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-email">
-                                        E-Mail <span class="text-red-400">*</span>
+                                        Primary E-Mail Contact <span class="text-red-400">*</span>
                                     </label>
                                     <div class="mt-1 relative rounded-md shadow-sm">
                                         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
